Try to fix weird bug with portfolio page on mobile

--- a/src/portfolio/Portfolio.css
+++ b/src/portfolio/Portfolio.css
@@ -28,6 +28,9 @@
     margin: 0.5em;
     filter: saturate(0);
     -webkit-filter: saturate(0);
+    -webkit-transform: translateZ(0);
+    -webkit-perspective: 1000px;
+    -webkit-backface-visibility: hidden;
 }
 
 .item-overlay {
